# llm-entity-extraction

./: .env.example  .gitignore  Dockerfile  README.md  ResultsDB.session.sql  fix_bad_csv.py  format_data.py  gitignore  job.yaml  note.yaml  notepad.txt  pyproject.toml
data/: ner_data_example.jsonl
docker/: run.sh
ner_extraction/: __init__.py  evaluate.py  get_predictions.py
ner_extraction/config/: __init__.py  config.py  config.yaml  settings.py
ner_extraction/data/: examples.jsonl
ner_extraction/prompts/: ner_prompt.jinja2
ner_extraction/schemas/: __init__.py  input_schema.py  ner_models.py  output_schema.py
ner_extraction/utilities/: entity_utils.py  eval_utils.py  jinja_utils.py  keywords.py  utils.py
notebooks/: llm_utils.py  runpod.py
notebooks/others/: data_1.csv  data_2.csv  data_3.csv  training_data.csv  training_data_2.csv
