[project]
name = "ner-extraction"
version = "0.1.1"
description = """
Unlocking insights from financial transactions LLMs to identify and extract named entities, 
streamlining data analysis workflows.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.1.1",
    "httpx>=0.28.1",
    "instructor>=1.8.3",
    "jinja2>=3.1.6",
    "langfuse>=2.60.7",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "polars>=1.31.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.0",
]
